# MyCompiler-

./: CMakeLists.txt  Compiler  compAsm.bash  grammer  output.asm  programExample.txt  readme.md  run  test.asm
Example_Programs/: count_to_input.txt  fibonaci.txt  test.txt
src/: main.cpp
src/CodeGeneration/: CodeGen.cpp  CodeGen.h
src/LexicalAnalysis/: Lexer.cpp  Lexer.h  LexerFSM.cpp  LexerFSM.h  StateToToken.h  Token.h
src/Libs/: end.h  print_int.h  read_int.h
src/SyntaxAnalysis/: Ast.h  Parser.cpp  Parser.h  ParserSLR.cpp  ParserSLR.h  ReductionRules.h  vec2.h
src/Utils/: FileHandeler.cpp  FileHandeler.h  stack.h
